--- a/DairyProject/templates/inc/navbar.html
+++ b/DairyProject/templates/inc/navbar.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <body>
 <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5">
-            <a href="{%  url 'home' %}" class="navbar-brand d-flex align-items-center">
+<a href="{%  url 'home' %}" class="navbar-brand d-flex align-items-center">
             <img class="img-fluid" src="{% static '/img/logo.jpeg' %}" height="200" width="100" alt="Logo">
 </a>
     <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -17,15 +17,14 @@
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Info</a>
                 <div class="dropdown-menu bg-light rounded-0 m-0">
                     <a href="{% url 'team' %}" class="dropdown-item">Our top sellers</a>
-                    <a  class="dropdown-item">Curd----70/-</a>
-                    <a  class="dropdown-item">Ghee----400/-</a>
-                    <a  class="dropdown-item">Butter----300/-</a>
-                    <a  class="dropdown-item">Paneer----100/-</a>
+                    <a  class="dropdown-item">-</a>
+                    <a  class="dropdown-item">-</a>
+                    <a  class="dropdown-item">-</a>
+                    <a  class="dropdown-item">-</a>
                 </div>
             </div>
             <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
         </div>
-        
     </div>
 </nav>
 </body>
