--- a/DairyProject/templates/reg/password_reset_done.html
+++ b/DairyProject/templates/reg/password_reset_done.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Reset Done</title>
+    <style></style>
 </head>
 <body>
     <h2>Password Reset Request Sent</h2>
