--- a/DairyProject/templates/login.html
+++ b/DairyProject/templates/login.html
@@ -170,6 +170,16 @@
                     {% endfor %}
                 </ul>
             {% endif %}
+            <!-- Include your login form here -->
+
+{% if messages %}
+<ul class="messages">
+  {% for message in messages %}
+    <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+  {% endfor %}
+</ul>
+{% endif %}
+
         </div>
         <script>  
             function togglePasswordVisibility(inputId) {
