--- a/DairyProject/templates/c_register.html
+++ b/DairyProject/templates/c_register.html
@@ -244,7 +244,7 @@
                     <div class="error-message" id="confirmpasswordError"></div>
                 </div>
                 <div class="form-group">
-                    <button type="submit">Register</button>
+                    <button type="submit",id="submit">Register</button>
                 </div>
             </form>
             <a href="{% url 'login' %}">Already have an account? Login</a>
