--- a/DairyProject/templates/category/product_detail.html
+++ b/DairyProject/templates/category/product_detail.html
@@ -1,7 +1,6 @@
 {% extends "layout/main.html" %}
 {% load static %}
 {% block body %}
-
 <div class="container-fluid">
     <div class="row">
         <!-- Sidebar -->
@@ -26,8 +25,8 @@
                                 <div class="position-relative">
                                     <img class="img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}" style="height: 200px; width: 200px;">
                                     <div class="product-overlay">
-                                        <a class="btn btn-square btn-secondary rounded-circle m-1" href="#" data-bs-toggle="modal" data-bs-target="#productModal{{ product.id }}">
-                                            <i id="heart-{{ product.id }}" class="bi bi-heart" style="color: black;"></i>
+                                        <a class="btn btn-square btn-secondary rounded-circle m-1" href="#" data-bs-toggle="modal" data-bs-target="#productModal{{ product.p_code }}">
+                                            <i id="heart-{{ product.p_code }}" class="bi bi-heart" style="color: black;"></i>
                                         </a>
                                     </div>
                                 </div>
@@ -37,7 +36,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="modal fade" id="productModal{{ product.id }}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal fade" id="productModal{{ product.p_code }}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog modal-lg">
                                 <div class="modal-content">
                                     <div class="modal-header">
@@ -52,8 +51,8 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                                         <form method="post" id="wishlistForm">{% csrf_token %}</form>
-                                        <button type="button" class="btn btn-primary" onclick="addToWishlist('{{ product.id }}')">Add to Wishlist</button>
-                                        <button type="button" class="btn btn-success">Make Order</button>
+                                        <button type="button" class="btn btn-primary" onclick="addToCart('{{ product.p_code }}')">Add to Cart</button>
+                                        <button type="button" class="btn btn-success">Buy</button>
                                     </div>
                                 </div>
                             </div>
@@ -67,9 +66,31 @@
     </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script>
+<!-- ...Existing code for product display -->
 
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    function addToCart(p_code) {
+        $.ajax({
+            url: '/add_to_cart/', 
+            method: 'POST',
+            data: {
+                'p_code': p_code,
+                'csrfmiddlewaretoken': '{{ csrf_token }}'
+            },
+            success: function(response) {
+                if (response.success) {
+                    alert('Product added to cart!');
+                    window.location.href = '/view_cart/';  // Redirect to payment page
+                } else {
+                    alert('Failed to add product to cart.');
+                }
+            },
+            error: function() {
+                alert('Error occurred while adding the product to cart.');
+            }
+        });
+    }
 </script>
+
 {% endblock %}
