--- a/DairyProject/templates/dash/c_dashboard.html
+++ b/DairyProject/templates/dash/c_dashboard.html
@@ -79,7 +79,7 @@
         <ul class="menu">
             <li><a href="#"><i class="fas fa-home"></i> Profile</a></li>
             <li><a href="{% url 'product_detail' %}"><i class="fas fa-chart-bar"></i>Product</a></li>
-            <li><a href="{% url 'wishlist' %}"><i class="fas fa-users"></i> Wishlist</a></li>
+            <li><a href="{% url 'view_cart' %}"><i class="fas fa-users"></i> Wishlist</a></li>
             <li><a href="#"><i class="fas fa-users"></i> Order History</a></li>
             <li><a href="#"><i class="fas fa-users"></i> Payment History</a></li>
             <li><a href="{% url 'logout' %}"><i class="fas fa-cog"></i> Logout</a></li>
